# Competitive

./: .gitignore  CMakeLists.txt  README.md  compile_cpp.sh
CSES/Distinct Colors/: main  main.cpp
CSES/Empty String/: main.cpp
CSES/Gray Code/: main.cpp
CSES/New Roads Queries/: compile_cpp.sh  main.cpp
CSES/Subordinates/: main
Codeforces/: Codeforces_Contest_Results.xlsx  scrape_submissions.py  test.py  upsolving_list.ipynb
Codeforces/1867/: package-lock.json
IOI with Spain/: compile_cpp.sh
IOI with Spain/A/: main  main.cpp
IOI with Spain/B/: main  main.cpp
IOI with Spain/C/: main  main.cpp
Kattis/pointinpolygon/: main  main.cpp
Kattis/polygonarea/: main  main.cpp
Kattis/segmentintersection/: main  main.cpp
LOC/A/: main  main.cpp
LOC/B/: main  main.cpp
LOC/C/: main  main.cpp
LOC/D/: main  main.cpp
LOC/E/: main  main.cpp
LOC/F/: main  main.cpp
LOC/G/: main  main.cpp
LOC/H/: main  main.cpp
OJ/10055/: main.cpp
OJ/10071/: main.cpp
OJ/11614/: main.cpp
OJ/11723/: main.cpp
OJ/11805/: main.cpp
OJ/12646/: main.cpp
OJ/12856/: main.cpp
OJ/12917/: main.cpp
OJ/13012/: main.cpp
OJ/13025/: main.cpp
OJ/13034/: main.cpp
OJ/13130/: main.cpp
OJ/1600/: main.cpp
Omegaup/8 reinas/: main.cpp
Omegaup/Aerodrom/: main  main.cpp
Omegaup/Chicos Mosby/: main.cpp
Omegaup/Coloreando Tablero/: main.cpp
Omegaup/Escape Geometrico/: main.cpp
Omegaup/Fiesta en la Piscina/: main.cpp
Omegaup/Frequent Values/: main.cpp
Omegaup/Jardineras/: main  main.cpp
PES/2019/: RMQ.cpp  (+15 more)
templates/: cpp.cpp
tools/: cppin  cppnew  cpprun
(+939 files in other folders)
